lib/LMEngine.h

typedef bool (*LME_InferenceCancelCallback)(const void* AUserData);
typedef void (*LME_InferenceTokenCallback)(const wchar_t* AToken,
  const void* AUserData);
typedef void (*LME_InfoCallback)(int ALevel, const wchar_t* AText,
  const void* AUserData);
typedef bool (*LME_LoadModelProgressCallback)(const wchar_t* AModelName,
  float AProgress, const void* AUserData);
typedef void (*LME_LoadModelCallback)(const wchar_t* AModelName, bool ASuccess,
  const void* AUserData);
typedef void (*LME_InferenceStartCallback)(const void* AUserData);
typedef void (*LME_InferenceEndCallback)(const void* AUserData);
/// <summary>
///   Gets the current speech voice.
/// </summary>
/// <returns>
///   The index of the current speech voice.
/// </returns>
int LME_GetSpeechVoice();
/// <summary>
///   Sets the current speech voice volume.
/// </summary>
/// <param name="AVolume">
///   The volume level to set.
/// </param>
void LME_SetSpeechVolume(float AVolume);
/// <summary>
///   Gets the current speech voice volume.
/// </summary>
/// <returns>
///   The current volume level.
/// </returns>
float LME_GetSpeechVolume();
/// <summary>
///   Sets the current speech voice rate.
/// </summary>
/// <param name="ARate">
///   The rate to set.
/// </param>
void LME_SetSpeechRate(float ARate);
/// <summary>
///   Gets the current speech voice rate.
/// </summary>
/// <returns>
///   The current rate.
/// </returns>
float LME_GetSpeechRate();
/// <summary>
///   Clears the current speech voice.
/// </summary>
void LME_ClearSpeech();
/// <summary>
///   Speaks text in the current speech voice.
/// </summary>
/// <param name="AText">
///   The text to be spoken.
/// </param>
/// <param name="APurge">
///   If True, purges the current speech before speaking.
/// </param>
void LME_SaySpeech(const wchar_t* AText, bool APurge);
/// <summary>
///   Checks if the current speech voice is active.
/// </summary>
/// <returns>
///   True if the speech voice is active, otherwise False.
/// </returns>
bool LME_IsSpeechActive();
/// <summary>
///   Pauses the current speech voice.
/// </summary>
void LME_PauseSpeech();
/// <summary>
///   Resumes the current speech voice.
/// </summary>
void LME_ResumeSpeech();
/// <summary>
///   Resets the current speech voice.
/// </summary>
void LME_ResetSpeech();
/// <summary>
///   Adds a word phrase to be substituted in speech.
/// </summary>
/// <param name="AWord">
///   The word to be substituted.
/// </param>
/// <param name="ASubstituteWord">
///   The substitute word.
/// </param>
void LME_SubstituteSpeechWord(const wchar_t* AWord,
  const wchar_t* ASubstituteWord);
/// <summary>
///   Gets the version information.
/// </summary>
/// <param name="AType">
///   The type of version information to retrieve.
/// </param>
/// <returns>
///   The version information as a string.
/// </returns>
wchar_t* LME_GetVersion(unsigned char AType);
/// <summary>
///   Clears the last error message.
/// </summary>
void LME_ClearError();
/// <summary>
///   Sets an error message.
/// </summary>
/// <param name="AText">
///   The error message to set.
/// </param>
void LME_SetError(const wchar_t* AText);
/// <summary>
///   Gets the last error message.
/// </summary>
/// <returns>
///   The last error message as a string.
/// </returns>
wchar_t* LME_GetError();
/// <summary>
///   Gets the inference cancel callback.
/// </summary>
/// <returns>
///   The inference cancel callback.
/// </returns>
LME_InferenceCancelCallback LME_GetInferenceCancelCallback();
/// <summary>
///   Sets the inference cancel callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetInferenceCancelCallback(LME_InferenceCancelCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference token callback.
/// </summary>
/// <returns>
///   The inference token callback.
/// </returns>
LME_InferenceTokenCallback LME_GetInferenceTokenCallback();
/// <summary>
///   Sets the inference token callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetInferenceTokenlCallback(LME_InferenceTokenCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the information callback.
/// </summary>
/// <returns>
///   The information callback.
/// </returns>
LME_InfoCallback LME_GetInfoCallback();
/// <summary>
///   Sets the information callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetInfoCallback(LME_InfoCallback AHandler, const void* AUserData);
/// <summary>
///   Gets the load model progress callback.
/// </summary>
/// <returns>
///   The load model progress callback.
/// </returns>
LME_LoadModelProgressCallback LME_GetLoadModelProgressCallback();
/// <summary>
///   Sets the load model progress callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetLoadModelProgressCallback(LME_LoadModelProgressCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the load model callback.
/// </summary>
/// <returns>
///   The load model callback.
/// </returns>
LME_LoadModelCallback LME_GetLoadModelCallback();
/// <summary>
///   Sets the load model callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetLoadModelCallback(LME_LoadModelCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference start callback.
/// </summary>
/// <returns>
///   The inference start callback.
/// </returns>
LME_InferenceStartCallback LME_GetInferenceStartCallback();
/// <summary>
///   Sets the inference start callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetInferenceStartCallback(LME_InferenceStartCallback AHandler,
  const void* AUserData);
/// <summary>
///   Gets the inference end callback.
/// </summary>
/// <returns>
///   The inference end callback.
/// </returns>
LME_InferenceEndCallback LME_GetInferenceEndCallback();
/// <summary>
///   Sets the inference end callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
void LME_SetInferenceEndCallback(LME_InferenceEndCallback AHandler,
  const void* AUserData);
/// <summary>
///   Initializes configuration settings.
/// </summary>
/// <param name="AModelPath">
///   The path to the model.
/// </param>
/// <param name="ANumGPULayers">
///   The number of GPU layers.
/// </param>
/// <param name="ANumThreads">
///   The number of CPU threads.
/// </param>
void LME_InitConfig(const wchar_t* AModelPath, const int ANumGPULayers, const int ANumThreads);
/// <summary>
///   Saves configuration settings to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the configuration to.
/// </param>
/// <returns>
///   True if the configuration was saved successfully, otherwise False.
/// </returns>
bool LME_SaveConfig(const wchar_t* AFilename);
/// <summary>
///   Loads configuration settings from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the configuration from.
/// </param>
/// <returns>
///   True if the configuration was loaded successfully, otherwise False.
/// </returns>
bool LME_LoadConfig(const wchar_t* AFilename);
/// <summary>
///   Clears all inference messages.
/// </summary>
void LME_ClearAllMessages();
/// <summary>
///   Adds a new inference message.
/// </summary>
/// <param name="ARole">
///   The role of the message.
/// </param>
/// <param name="AContent">
///   The content of the message.
/// </param>
/// <returns>
///   The message ID.
/// </returns>
int LME_AddMessage(const wchar_t* ARole, const wchar_t* AContent);
/// <summary>
///   Gets the last user role inference message.
/// </summary>
/// <returns>
///   The last user role inference message.
/// </returns>
wchar_t* LME_GetLastUserMessage();
/// <summary>
///   Returns an inference prompt for the specified model from current messages.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   The inference prompt.
/// </returns>
wchar_t* LME_BuildMessageInferencePrompt(const wchar_t* AModelName);
/// <summary>
///   Clears all model definitions.
/// </summary>
void LME_ClearModelDefines();
/// <summary>
///   Adds a model definition.
/// </summary>
/// <param name="AModelFilename">
///   The filename of the model.
/// </param>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxContext">
///   The maximum context size.
/// </param>
/// <param name="ATemplate">
///   The template for the model.
/// </param>
/// <param name="ATemplateEnd">
///   The end template for the model.
/// </param>
/// <returns>
///   The model ID.
/// </returns>
int LME_DefineModel(const wchar_t* AModelFilename, const wchar_t* AModelName,
  unsigned int AMaxContext, const wchar_t* ATemplate,
  const wchar_t* ATemplateEnd);
/// <summary>
///   Saves all model definitions to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the definitions to.
/// </param>
/// <returns>
///   True if the definitions were saved successfully, otherwise False.
/// </returns>
bool LME_SaveModelDefines(const wchar_t* AFilename);
/// <summary>
///   Loads model definitions from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the definitions from.
/// </param>
/// <returns>
///   True if the definitions were loaded successfully, otherwise False.
/// </returns>
bool LME_LoadModelDefines(const wchar_t* AFilename);
/// <summary>
///   Loads the specified model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   True if the model was loaded successfully, otherwise False.
/// </returns>
bool LME_LoadModel(const wchar_t* AModelName);
/// <summary>
///   Checks if a model is currently loaded.
/// </summary>
/// <returns>
///   True if a model is loaded, otherwise False.
/// </returns>
bool LME_IsModelLoaded();