lib/LMEngine.pas


/// <summary>
///   Gets the current speech voice.
/// </summary>
/// <returns>
///   The index of the current speech voice.
/// </returns>
function LME_GetSpeechVoice(): Integer; cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the current speech voice volume.
/// </summary>
/// <param name="AVolume">
///   The volume level to set.
/// </param>
procedure LME_SetSpeechVolume(const AVolume: Single); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the current speech voice volume.
/// </summary>
/// <returns>
///   The current volume level.
/// </returns>
function LME_GetSpeechVolume(): Single; cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the current speech voice rate.
/// </summary>
/// <param name="ARate">
///   The rate to set.
/// </param>
procedure LME_SetSpeechRate(const ARate: Single); cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the current speech voice rate.
/// </summary>
/// <returns>
///   The current rate.
/// </returns>
function LME_GetSpeechRate(): Single; cdecl; external LMENGINE_DLL;

/// <summary>
///   Clears the current speech voice.
/// </summary>
procedure LME_ClearSpeech(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Speaks text in the current speech voice.
/// </summary>
/// <param name="AText">
///   The text to be spoken.
/// </param>
/// <param name="APurge">
///   If True, purges the current speech before speaking.
/// </param>
procedure LME_SaySpeech(const AText: PWideChar; const APurge: Boolean); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Checks if the current speech voice is active.
/// </summary>
/// <returns>
///   True if the speech voice is active, otherwise False.
/// </returns>
function LME_IsSpeechActive(): Boolean; cdecl; external LMENGINE_DLL;

/// <summary>
///   Pauses the current speech voice.
/// </summary>
procedure LME_PauseSpeech(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Resumes the current speech voice.
/// </summary>
procedure LME_ResumeSpeech(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Resets the current speech voice.
/// </summary>
procedure LME_ResetSpeech(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Adds a word phrase to be substituted in speech.
/// </summary>
/// <param name="AWord">
///   The word to be substituted.
/// </param>
/// <param name="ASubstituteWord">
///   The substitute word.
/// </param>
procedure LME_SubstituteSpeechWord(const AWord, ASubstituteWord: PWideChar);
  cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the version information.
/// </summary>
/// <param name="AType">
///   The type of version information to retrieve.
/// </param>
/// <returns>
///   The version information as a string.
/// </returns>
function LME_GetVersion(const AType: Byte): PWideChar; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Clears the last error message.
/// </summary>
procedure LME_ClearError(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets an error message.
/// </summary>
/// <param name="AText">
///   The error message to set.
/// </param>
procedure LME_SetError(const AText: PWideChar); cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the last error message.
/// </summary>
/// <returns>
///   The last error message as a string.
/// </returns>
function LME_GetError(): PWideChar; cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the inference cancel callback.
/// </summary>
/// <returns>
///   The inference cancel callback.
/// </returns>
function LME_GetInferenceCancelCallback(): LME_InferenceCancelCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Sets the inference cancel callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetInferenceCancelCallback(
  const AHandler: LME_InferenceCancelCallback; const AUserData: Pointer);
  cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the inference token callback.
/// </summary>
/// <returns>
///   The inference token callback.
/// </returns>
function LME_GetInferenceTokenCallback(): LME_InferenceTokenCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Sets the inference token callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetInferenceTokenlCallback(
  const AHandler: LME_InferenceTokenCallback; const AUserData: Pointer); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the information callback.
/// </summary>
/// <returns>
///   The information callback.
/// </returns>
function LME_GetInfoCallback(): LME_InfoCallback; cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the information callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetInfoCallback(const AHandler: LME_InfoCallback;
  const AUserData: Pointer); cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the load model progress callback.
/// </summary>
/// <returns>
///   The load model progress callback.
/// </returns>
function LME_GetLoadModelProgressCallback(): LME_LoadModelProgressCallback;
  cdecl; external LMENGINE_DLL;

/// <summary>
///   Sets the load model progress callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetLoadModelProgressCallback(
  const AHandler: LME_LoadModelProgressCallback; const AUserData: Pointer);
  cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the load model callback.
/// </summary>
/// <returns>
///   The load model callback.
/// </returns>
function LME_GetLoadModelCallback(): LME_LoadModelCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Sets the load model callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetLoadModelCallback(const AHandler: LME_LoadModelCallback;
  const AUserData: Pointer); cdecl; external LMENGINE_DLL;

/// <summary>
///   Gets the inference start callback.
/// </summary>
/// <returns>
///   The inference start callback.
/// </returns>
function LME_GetInferenceStartCallback(): LME_InferenceStartCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Sets the inference start callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetInferenceStartCallback(
  const AHandler: LME_InferenceStartCallback; const AUserData: Pointer); cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the inference end callback.
/// </summary>
/// <returns>
///   The inference end callback.
/// </returns>
function LME_GetInferenceEndCallback(): LME_InferenceEndCallback; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Sets the inference end callback.
/// </summary>
/// <param name="AHandler">
///   The callback handler.
/// </param>
/// <param name="AUserData">
///   User data to pass to the callback.
/// </param>
procedure LME_SetInferenceEndCallback(const AHandler: LME_InferenceEndCallback;
  const AUserData: Pointer); cdecl; external LMENGINE_DLL;

/// <summary>
///   Initializes configuration settings.
/// </summary>
/// <param name="AModelPath">
///   The path to the model.
/// </param>
/// <param name="ANumGPULayers">
///   The number of GPU layers.
/// </param>
/// <param name="ANumThreads">
///   The number of CPU threads.
/// </param>

procedure LME_InitConfig(const AModelPath: PWideChar;
  const ANumGPULayers, ANumThreads: Int32); cdecl; external LMENGINE_DLL;

/// <summary>
///   Saves configuration settings to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the configuration to.
/// </param>
/// <returns>
///   True if the configuration was saved successfully, otherwise False.
/// </returns>
function LME_SaveConfig(const AFilename: PWideChar): Boolean; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Loads configuration settings from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the configuration from.
/// </param>
/// <returns>
///   True if the configuration was loaded successfully, otherwise False.
/// </returns>
function LME_LoadConfig(const AFilename: PWideChar): Boolean; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Clears all inference messages.
/// </summary>
procedure LME_ClearAllMessages(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Adds a new inference message.
/// </summary>
/// <param name="ARole">
///   The role of the message.
/// </param>
/// <param name="AContent">
///   The content of the message.
/// </param>
/// <returns>
///   The message ID.
/// </returns>
function LME_AddMessage(const ARole, AContent: PWideChar): Int32; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Gets the last user role inference message.
/// </summary>
/// <returns>
///   The last user role inference message.
/// </returns>
function LME_GetLastUserMessage(): PWideChar; cdecl; external LMENGINE_DLL;

/// <summary>
///   Returns an inference prompt for the specified model from current messages.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   The inference prompt.
/// </returns>
function LME_BuildMessageInferencePrompt(
  const AModelName: PWideChar): PWideChar; cdecl; external LMENGINE_DLL;

/// <summary>
///   Clears all model definitions.
/// </summary>
procedure LME_ClearModelDefines(); cdecl; external LMENGINE_DLL;

/// <summary>
///   Adds a model definition.
/// </summary>
/// <param name="AModelFilename">
///   The filename of the model.
/// </param>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <param name="AMaxContext">
///   The maximum context size.
/// </param>
/// <param name="ATemplate">
///   The template for the model.
/// </param>
/// <param name="ATemplateEnd">
///   The end template for the model.
/// </param>
/// <returns>
///   The model ID.
/// </returns>
function LME_DefineModel(const AModelFilename, AModelName: PWideChar;
  const AMaxContext: UInt32; const ATemplate,
  ATemplateEnd: PWideChar): Int32; cdecl; external LMENGINE_DLL;

/// <summary>
///   Saves all model definitions to a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to save the definitions to.
/// </param>
/// <returns>
///   True if the definitions were saved successfully, otherwise False.
/// </returns>
function LME_SaveModelDefines(const AFilename: PWideChar): Boolean; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Loads model definitions from a JSON file on disk.
/// </summary>
/// <param name="AFilename">
///   The filename to load the definitions from.
/// </param>
/// <returns>
///   True if the definitions were loaded successfully, otherwise False.
/// </returns>
function LME_LoadModelDefines(const AFilename: PWideChar): Boolean; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Loads the specified model.
/// </summary>
/// <param name="AModelName">
///   The name of the model.
/// </param>
/// <returns>
///   True if the model was loaded successfully, otherwise False.
/// </returns>
function LME_LoadModel(const AModelName: PWideChar): Boolean; cdecl;
  external LMENGINE_DLL;

/// <summary>
///   Checks if a model is currently loaded.
/// </summary>
/// <returns>
///   True if a model is loaded, otherwise False.
/// </returns>
function LME_IsModelLoaded(): Boolean; cdecl; external LMENGINE_DLL;
